Continue work with JS

--- a/guias.html
+++ b/guias.html
@@ -162,96 +162,99 @@
                 </a>
 
             </div>
-         
+
         </section>
 
         <div class="other gias__other">
             <p class="other__text other__text-js">MOSTRAR MAIS</p>
             <img class="other__arrow" src="img/arrowdown.png">
         </div>
-        <div class="bonuses__flex flex">
-            <a href="#" class="bonus bonuses__bonus">
-                <p class="bonus__date">7 MAIO 2022</p>
-                <img class="bonus__image" src="img/bonus.jpg">
-                <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
-                <div class="bonus__more more">
-                    <p class="more__text">LER MAIS</p>
-                    <img class="more__arrow" src="img/orangearrow.png">
-                </div>
 
-            </a>
-            <a href="#" class="bonus bonuses__bonus">
-                <p class="bonus__date">7 MAIO 2022</p>
-                <img class="bonus__image" src="img/bonus.jpg">
-                <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
-                <div class="bonus__more more">
-                    <p class="more__text">LER MAIS</p>
-                    <img class="more__arrow" src="img/orangearrow.png">
-                </div>
+        <section class="bonuses bonuses__guias">
+            <div class="bonuses__flex flex">
+                <a href="#" class="bonus bonuses__bonus">
+                    <p class="bonus__date">7 MAIO 2022</p>
+                    <img class="bonus__image" src="img/bonus.jpg">
+                    <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                    <div class="bonus__more more">
+                        <p class="more__text">LER MAIS</p>
+                        <img class="more__arrow" src="img/orangearrow.png">
+                    </div>
 
-            </a>
-            <a href="#" class="bonus bonuses__bonus">
-                <p class="bonus__date">7 MAIO 2022</p>
-                <img class="bonus__image" src="img/bonus.jpg">
-                <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
-                <div class="bonus__more more">
-                    <p class="more__text">LER MAIS</p>
-                    <img class="more__arrow" src="img/orangearrow.png">
-                </div>
+                </a>
+                <a href="#" class="bonus bonuses__bonus">
+                    <p class="bonus__date">7 MAIO 2022</p>
+                    <img class="bonus__image" src="img/bonus.jpg">
+                    <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                    <div class="bonus__more more">
+                        <p class="more__text">LER MAIS</p>
+                        <img class="more__arrow" src="img/orangearrow.png">
+                    </div>
 
-            </a>
-            <a href="#" class="bonus bonuses__bonus">
-                <p class="bonus__date">7 MAIO 2022</p>
-                <img class="bonus__image" src="img/bonus.jpg">
-                <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
-                <div class="bonus__more more">
-                    <p class="more__text">LER MAIS</p>
-                    <img class="more__arrow" src="img/orangearrow.png">
-                </div>
+                </a>
+                <a href="#" class="bonus bonuses__bonus">
+                    <p class="bonus__date">7 MAIO 2022</p>
+                    <img class="bonus__image" src="img/bonus.jpg">
+                    <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                    <div class="bonus__more more">
+                        <p class="more__text">LER MAIS</p>
+                        <img class="more__arrow" src="img/orangearrow.png">
+                    </div>
 
-            </a>
-            <a href="#" class="bonus bonuses__bonus bonus__none">
-                <p class="bonus__date">7 MAIO 2022</p>
-                <img class="bonus__image" src="img/bonus.jpg">
-                <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
-                <div class="bonus__more more">
-                    <p class="more__text">LER MAIS</p>
-                    <img class="more__arrow" src="img/orangearrow.png">
-                </div>
+                </a>
+                <a href="#" class="bonus bonuses__bonus">
+                    <p class="bonus__date">7 MAIO 2022</p>
+                    <img class="bonus__image" src="img/bonus.jpg">
+                    <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                    <div class="bonus__more more">
+                        <p class="more__text">LER MAIS</p>
+                        <img class="more__arrow" src="img/orangearrow.png">
+                    </div>
 
-            </a>
-            <a href="#" class="bonus bonuses__bonus bonus__none">
-                <p class="bonus__date">7 MAIO 2022</p>
-                <img class="bonus__image" src="img/bonus.jpg">
-                <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
-                <div class="bonus__more more">
-                    <p class="more__text">LER MAIS</p>
-                    <img class="more__arrow" src="img/orangearrow.png">
-                </div>
+                </a>
+                <a href="#" class="bonus bonuses__bonus bonus__none">
+                    <p class="bonus__date">7 MAIO 2022</p>
+                    <img class="bonus__image" src="img/bonus.jpg">
+                    <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                    <div class="bonus__more more">
+                        <p class="more__text">LER MAIS</p>
+                        <img class="more__arrow" src="img/orangearrow.png">
+                    </div>
 
-            </a>
-            <a href="#" class="bonus bonuses__bonus bonus__none">
-                <p class="bonus__date">7 MAIO 2022</p>
-                <img class="bonus__image" src="img/bonus.jpg">
-                <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
-                <div class="bonus__more more">
-                    <p class="more__text">LER MAIS</p>
-                    <img class="more__arrow" src="img/orangearrow.png">
-                </div>
+                </a>
+                <a href="#" class="bonus bonuses__bonus bonus__none">
+                    <p class="bonus__date">7 MAIO 2022</p>
+                    <img class="bonus__image" src="img/bonus.jpg">
+                    <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                    <div class="bonus__more more">
+                        <p class="more__text">LER MAIS</p>
+                        <img class="more__arrow" src="img/orangearrow.png">
+                    </div>
 
-            </a>
-            <a href="#" class="bonus bonuses__bonus bonus__none">
-                <p class="bonus__date">7 MAIO 2022</p>
-                <img class="bonus__image" src="img/bonus.jpg">
-                <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
-                <div class="bonus__more more">
-                    <p class="more__text">LER MAIS</p>
-                    <img class="more__arrow" src="img/orangearrow.png">
-                </div>
+                </a>
+                <a href="#" class="bonus bonuses__bonus bonus__none">
+                    <p class="bonus__date">7 MAIO 2022</p>
+                    <img class="bonus__image" src="img/bonus.jpg">
+                    <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                    <div class="bonus__more more">
+                        <p class="more__text">LER MAIS</p>
+                        <img class="more__arrow" src="img/orangearrow.png">
+                    </div>
 
-            </a>
+                </a>
+                <a href="#" class="bonus bonuses__bonus bonus__none">
+                    <p class="bonus__date">7 MAIO 2022</p>
+                    <img class="bonus__image" src="img/bonus.jpg">
+                    <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                    <div class="bonus__more more">
+                        <p class="more__text">LER MAIS</p>
+                        <img class="more__arrow" src="img/orangearrow.png">
+                    </div>
 
-        </div>
+                </a>
+
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <svg class="footer__dots" width="12vw" height="353" viewBox="0 0 269 353" fill="none"
@@ -379,4 +382,5 @@
     </footer>
 </body>
 <script src="filters.js"></script>
+
 </html>
