--- a/index.html
+++ b/index.html
@@ -574,8 +574,8 @@
                         fill="#0057FF" />
                 </svg>
                 <div class="bonuses__element element bonuses__element-arrows bonuses__element-block">
-                    <img class=" element__arrow" src="img/leftarrowyellow.png">
-                    <img class=" element__arrow" src="img/rightarrowyellow.png">
+                    <img class=" element__arrow arrow__left-jsm" src="img/leftarrowyellow.png">
+                    <img class=" element__arrow arrow__right-jsm" src="img/rightarrowyellow.png">
                 </div>
             </div>
             <div class="filters bonuses__filters">
