--- a/offer.html
+++ b/offer.html
@@ -28,6 +28,7 @@
             </nav>
         </menu>
     </header>
+
     <main class="main main-offer">
         <section class="anchor main__anchor">
             <div class="anchor__offer">
@@ -47,21 +48,20 @@
                     </div>
                 </div>
 
-                <button onClick='location.href=""'
-                    class="button button__open button__open-margin button__open-anchor">abrir betano<img class="arrow"
-                        src="img/arrow.png"></button>
+                <button class="button button__open button__open-margin button__open-anchor">abrir betano<img
+                        class="arrow" src="img/arrow.png"></button>
             </div>
             <ul class="anchor__list">
-                <li class="anchor__list-element">1. Bônus Betano</li>
-                <li class="anchor__list-element">2. Betano é Confiável?</li>
-                <li class="anchor__list-element">3. Como Funciona a Betano?</li>
-                <li class="anchor__list-element">4. Apostas Esportivas</li>
-                <li class="anchor__list-element">5. Ferramentas de Apostas</li>
-                <li class="anchor__list-element">6. Betano Cassino</li>
-                <li class="anchor__list-element">7. Betano App</li>
-                <li class="anchor__list-element">8. Métodos de Pagamento</li>
-                <li class="anchor__list-element">9. Suporte ao Cliente</li>
-                <li class="anchor__list-element">10. Por Que Apostar na Betano?</li>
+                <li class="anchor__list-element"><a class="anchor__list-element-link" href="#section-1">1. Bônus Betano</a></li>
+                <li class="anchor__list-element"><a class="anchor__list-element-link" href="#section-2">2. Betano é Confiável?</a></li>
+                <li class="anchor__list-element"><a class="anchor__list-element-link" href="#section-3">3. Como Funciona a Betano?</a></li>
+                <li class="anchor__list-element"><a class="anchor__list-element-link" href="#section-4">4. Apostas Esportivas</a></li>
+                <li class="anchor__list-element"><a class="anchor__list-element-link" href="#section-5">5. Ferramentas de Apostas</a></li>
+                <li class="anchor__list-element"><a class="anchor__list-element-link" href="#section-6">6. Betano Cassino</a></li>
+                <li class="anchor__list-element"><a class="anchor__list-element-link" href="#section-7">7. Betano App</a></li>
+                <li class="anchor__list-element"><a class="anchor__list-element-link" href="#section-8">8. Métodos de Pagamento</a></li>
+                <li class="anchor__list-element"><a class="anchor__list-element-link" href="#section-9">9. Suporte ao Cliente</a></li>
+                <li class="anchor__list-element"><a class="anchor__list-element-link" href="#section-10">10. Por Que Apostar na Betano?</a></li>
             </ul>
         </section>
         <section class="main__page page">
@@ -89,8 +89,7 @@
                             </span><br>Apostas Grátis e Bônus de <span style="color: #FEAB41;">R$300</span> | Betano É
                             Confiável?
                         </h1>
-                        <button onClick='location.href=""'
-                            class="button button__open button__open-orange button__open-anchor">abrir betano<img
+                        <button class="button button__open button__open-orange button__open-anchor">abrir betano<img
                                 class="arrow" src="img/arrow.png"></button>
                         <p class="banner__notation">18+ Aposte Com Responsabilidade</p>
                         <img class="page__crosses-orange crosses__none" src="img/crossesorange.png">
@@ -334,7 +333,7 @@
                 <img class="page__image" src="img/page1.png">
             </section>
             <section class="info info-page">
-                <div class="info__tittle tittle tittle__page">
+                <div class="info__tittle tittle tittle__page anchor__section-js" id="section-1">
                     <h2 class="tittle__2 tittle__2-page">Bônus Betano
                     </h2>
                     <img class="crosses crosses__none crosses__absolute crosses__page" src="img/crosses.png">
@@ -697,7 +696,7 @@
 
                 Vale lembrar que você tem até 30 dias para usar o bônus.</p>
             <section class="info info-page">
-                <div class="info__tittle tittle tittle__page">
+                <div class="info__tittle tittle tittle__page anchor__section-js" id="section-2">
                     <h2 class="tittle__2 tittle__2-page">A Betano é Confiável?
                     </h2>
                     <svg class="crosses crosses__none crosses__absolute crosses__page lines__side-tittle" width="40vw"
@@ -828,7 +827,7 @@
             </p>
             <img class="page__image page__image-margin" src="img/page5.png">
             <section class="info info-page">
-                <div class="info__tittle tittle tittle__page">
+                <div class="info__tittle tittle tittle__page anchor__section-js" id="section-3">
                     <h2 class="tittle__2 tittle__2-page">Como Funciona
                         a Betano?
                     </h2>
@@ -991,7 +990,7 @@
                 quando clicamos em “Registrar” e “Iniciar Sessão”.
             </p>
             <section class="info info-page">
-                <div class="info__tittle tittle tittle__page">
+                <div class="info__tittle tittle tittle__page anchor__section-js" id="section-4">
                     <h2 class="tittle__2 tittle__2-page">Apostas Esportivas
                     </h2>
                     <img class="crosses crosses__none crosses__absolute crosses__page" src="img/crosses.png">
@@ -1243,7 +1242,7 @@
                 </div>
             </section>
             <section class="info info-page">
-                <div class="info__tittle tittle tittle__page">
+                <div class="info__tittle tittle tittle__page anchor__section-js" id="section-5">
                     <h2 class="tittle__2 tittle__2-page">Ferramentas de Aposta
                     </h2>
                 </div>
@@ -1353,7 +1352,7 @@
             <p class="page__text">Esse, sem dúvidas, é um dos melhores recursos dessa casa de apostas!
             </p>
             <section class="info info-page">
-                <div class="info__tittle tittle tittle__page">
+                <div class="info__tittle tittle tittle__page anchor__section-js" id="section-6">
                     <h2 class="tittle__2 tittle__2-page">Betano Cassino
                     </h2>
                 </div>
@@ -1425,7 +1424,7 @@
                 </div>
             </section>
             <section class="info info-page">
-                <div class="info__tittle tittle tittle__page">
+                <div class="info__tittle tittle tittle__page anchor__section-js" id="section-7">
                     <h2 class="tittle__2 tittle__2-page">Betano App
                     </h2>
                     <svg class="dots__page crosses__none" width="20vw" height="346" viewBox="0 0 308 346" fill="none"
@@ -1494,7 +1493,7 @@
                 Betano.
             </p>
             <section class="info info-page">
-                <div class="info__tittle tittle tittle__page">
+                <div class="info__tittle tittle tittle__page anchor__section-js" id="section-8">
                     <h2 class="tittle__2 tittle__2-page">Métodos de Pagamento
                     </h2>
                 </div>
@@ -1563,7 +1562,7 @@
                 R$40.
             </p>
             <section class="info info-page">
-                <div class="info__tittle tittle tittle__page">
+                <div class="info__tittle tittle tittle__page anchor__section-js" id="section-9">
                     <h2 class="tittle__2 tittle__2-page">Suporte ao Cliente
                     </h2>
                     <svg class="crosses crosses__none crosses__absolute crosses__page lines__side-tittle" width="40vw"
@@ -1620,7 +1619,7 @@
                 </p>
             </section>
             <section class="opportunities">
-                <div class="opportunities__tittle tittle tittle__page">
+                <div class="opportunities__tittle tittle tittle__page anchor__section-js" id="section-10">
                     <div class="tittle__container">
                         <h2 class="tittle__2 tittle__2-page">Conclusão: Por Que Apostar na Betano?
                         </h2>
@@ -1781,8 +1780,7 @@
                     </div>
 
 
-                    <button onClick='location.href=""'
-                        class="button button__open button__open-anchor form__button">PUBLICAR <svg class="arrow"
+                    <button class="button button__open button__open-anchor form__button">PUBLICAR <svg class="arrow"
                             width="1.4vw" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
                             <rect width="30" height="30" fill="url(#pattern0)" />
@@ -1882,17 +1880,18 @@
                         <h2 class="tittle__2 tittle__2-page">Você pode gostar
                         </h2>
                     </div>
-                    <div class="bonuses__element element bonuses__element-arrows bonuses__element-block">
-                        <img class=" element__arrow" src="img/leftarrowyellow.png">
-                        <img class=" element__arrow" src="img/rightarrowyellow.png">
-                    </div>
                     <div class="bonuses__element element element-page bonuses__element-arrows bonuses__element-none">
-                        <img class=" element__arrow" src="img/leftarrowblue.png">
-                        <img class=" element__arrow" src="img/rightarrowblue.png">
+                        <img class=" element__arrow arrow__left-js" src="img/leftarrowblue.png">
+                        <img class=" element__arrow arrow__right-js" src="img/rightarrowblue.png">
                     </div>
+                    <div class="bonuses__element element bonuses__element-arrows bonuses__element-block">
+                        <img class=" element__arrow arrow__left-jsm" src="img/leftarrowyellow.png">
+                        <img class=" element__arrow arrow__right-jsm" src="img/rightarrowyellow.png">
+                    </div>
+
                 </div>
             </section>
-            <section class="bonuses bonuses__guias bonuses__guias-page">
+            <section class="bonuses  bonuses__guias bonuses__guias-page">
                 <div class="bonuses__flex flex bonuses__flex-page">
                     <a href="#" class="bonus bonuses__bonus bonuses__bonus-width">
                         <p class="bonus__date">7 MAIO 2022</p>
@@ -1936,7 +1935,72 @@
                     </a>
 
                 </div>
+                <div class="bonuses__flex flex bonuses__flex-page">
+                    <a href="#" class="bonus bonuses__bonus bonuses__bonus-width">
+                        <p class="bonus__date">7 MAIO 2022</p>
+                        <img class="bonus__image" src="img/bonus.jpg">
+                        <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                        <div class="bonus__more more">
+                            <p class="more__text">LER MAIS</p>
+                            <img class="more__arrow" src="img/orangearrow.png">
+                        </div>
+                    </a>
+                    <a href="#" class="bonus bonuses__bonus bonuses__bonus-width bonus__none">
+                        <p class="bonus__date">7 MAIO 2022</p>
+                        <img class="bonus__image" src="img/bonus.jpg">
+                        <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                        <div class="bonus__more more">
+                            <p class="more__text">LER MAIS</p>
+                            <img class="more__arrow" src="img/orangearrow.png">
+                        </div>
 
+                    </a>
+                    <a href="#" class="bonus bonuses__bonus bonuses__bonus-width bonus__none">
+                        <p class="bonus__date">7 MAIO 2022</p>
+                        <img class="bonus__image" src="img/bonus.jpg">
+                        <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                        <div class="bonus__more more">
+                            <p class="more__text">LER MAIS</p>
+                            <img class="more__arrow" src="img/orangearrow.png">
+                        </div>
+
+                    </a>
+                </div>
+                <div class="bonuses__flex flex bonuses__flex-page">
+                    <a href="#" class="bonus bonuses__bonus bonuses__bonus-width">
+                        <p class="bonus__date">7 MAIO 2022</p>
+                        <img class="bonus__image" src="img/bonus.jpg">
+                        <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                        <div class="bonus__more more">
+                            <p class="more__text">LER MAIS</p>
+                            <img class="more__arrow" src="img/orangearrow.png">
+                        </div>
+
+                    </a>
+                    <a href="#" class="bonus bonuses__bonus bonuses__bonus-width bonus__none">
+                        <p class="bonus__date">7 MAIO 2022</p>
+                        <img class="bonus__image" src="img/bonus.jpg">
+                        <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                        <div class="bonus__more more">
+                            <p class="more__text">LER MAIS</p>
+                            <img class="more__arrow" src="img/orangearrow.png">
+                        </div>
+
+                    </a>
+
+
+                </div>
+                <div class="bonuses__flex flex bonuses__flex-page">
+                    <a href="#" class="bonus bonuses__bonus bonuses__bonus-width">
+                        <p class="bonus__date">7 MAIO 2022</p>
+                        <img class="bonus__image" src="img/bonus.jpg">
+                        <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                        <div class="bonus__more more">
+                            <p class="more__text">LER MAIS</p>
+                            <img class="more__arrow" src="img/orangearrow.png">
+                        </div>
+
+                    </a>
                 </div>
             </section>
         </section>
@@ -2070,4 +2134,5 @@
     </footer>
 </body>
 <script src="filters.js"></script>
+
 </html>
