--- a/bonus.html
+++ b/bonus.html
@@ -14,8 +14,10 @@
 </head>
 
 <body>
-    <header class="header header__container">
-        <div class="logo header__logo"></div>
+    <header class="header header__container header__container-js">
+        <a href="index.html">
+            <div class="logo header__logo">LOGO</div>
+        </a>
         <menu class="header__menu menu">
             <nav class="navigation menu__navigation">
                 <ul class="navigation__list">
@@ -27,7 +29,20 @@
                 </ul>
             </nav>
         </menu>
+        <img class="menu__button" src="img/menu.png">
     </header>
+    <section class="menu__humburger menu header__container-js"> 
+        <nav class="navigation menu__navigation  menu__navigation-burger">
+            <img class="menu__button menu__button-burger" src="img/menu__crosses.png">
+            <ul class="navigation__list navigation__list-burger">
+                <li><a class="navigation__list-item navigation__list-item-white" href="index.html">SITES DE APOSTAS</a></li>
+                <li><a class="navigation__list-item navigation__list-item-white" href="/bonus.html">BÔNUS DE
+                        CADASTRO</a></li>
+                <li><a class="navigation__list-item navigation__list-item-white" href="/casino.html"> CASSINOS</a></li>
+                <li><a class="navigation__list-item navigation__list-item-white" href="guias.html">GUIAS</a></li>
+            </ul>
+        </nav>
+    </section>
     <main>
         <div class="banner">
             <div class="banner__block banner__block-main banner__block-bonus">
@@ -1238,7 +1253,7 @@
                 <div class="tittle__container">
                     <h2 class="tittle__2 tittle__2-orange">Dúvidas Frequentes</h2>
                 </div>
-                <svg class="crosses__none" width="24vw" height="auto" viewBox="0 0 551 641" fill="none"
+                <svg class="crosses__none" width="24vw" height="30vw" viewBox="0 0 551 641" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_127_10696)">
                         <path
@@ -1337,7 +1352,7 @@
 
     </main>
     <footer class="footer">
-        <svg class="footer__dots" width="12vw" height="353" viewBox="0 0 269 353" fill="none"
+        <!-- <svg class="footer__dots" width="12vw" height="353" viewBox="0 0 269 353" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path
                 d="M20.7172 159.738C19.115 161.473 17.0342 162.694 14.7381 163.247C12.4419 163.8 10.0334 163.659 7.8172 162.843C5.60096 162.027 3.67646 160.572 2.28707 158.662C0.897668 156.752 0.10576 154.473 0.0114759 152.113C-0.0828087 149.753 0.524764 147.418 1.75737 145.403C2.98997 143.388 4.79226 141.784 6.93633 140.794C9.08041 139.804 11.47 139.471 13.8029 139.839C16.1358 140.207 18.3074 141.258 20.0429 142.86C22.3683 145.01 23.7454 147.995 23.8719 151.159C23.9983 154.324 22.8637 157.409 20.7172 159.738Z"
@@ -1372,10 +1387,12 @@
             <path
                 d="M252.252 114.752C250.649 116.487 248.567 117.707 246.271 118.258C243.974 118.81 241.566 118.668 239.35 117.85C237.134 117.033 235.211 115.577 233.822 113.666C232.434 111.755 231.643 109.476 231.551 107.116C231.458 104.755 232.067 102.421 233.3 100.407C234.534 98.3928 236.337 96.7899 238.482 95.8008C240.627 94.8117 243.017 94.4808 245.349 94.8499C247.682 95.219 249.853 96.2716 251.587 97.8745C252.739 98.939 253.67 100.22 254.327 101.644C254.984 103.069 255.354 104.609 255.415 106.176C255.477 107.743 255.23 109.307 254.687 110.779C254.144 112.25 253.317 113.601 252.252 114.752Z"
                 fill="#0057FF" />
-        </svg>
+        </svg> -->
 
         <div class="footer__container">
-            <div class="logo footer__logo"></div>
+            <a href="index.html">
+                <div class="logo footer__logo">LOGO</div>
+            </a>
             <div class="footer__navigation">
                 <h3 class="footer__navigation-tittle">ATUALIDADE</h3>
                 <div class="footer__navigation-container">
@@ -1442,7 +1459,7 @@
                 está apostando em operadores licenciados em sua jurisdição. Adoramos apostar, mas fazemos isso com
                 responsabilidade e pedimos que você faça o mesmo!</p>
             <p class="footer__age">18+</p>
-            <svg class="crosses__none" style="margin-top: -3vw;" width="20vw" height="174" viewBox="0 0 159 174"
+            <svg class="crosses__none footer__crosses" style="margin-top: -3vw;" width="20vw" height="174" viewBox="0 0 159 174"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                     d="M127.421 32.5293L87.1493 72.1717L46.8779 32.5293L15.2852 63.6154L55.5565 103.258L15.2852 142.9L46.8779 173.999L87.1493 134.357L127.421 173.999L159 142.9L118.729 103.258L159 63.6154L127.421 32.5293Z"
